--- a/EntityFrameworkExample-master/EntityDatabase/EntityDatabase.vbproj
+++ b/EntityFrameworkExample-master/EntityDatabase/EntityDatabase.vbproj
@@ -90,10 +90,14 @@
     <Compile Include="BusinessLogic\Services\Implementations\OfficeAsignamentService.vb" />
     <Compile Include="BusinessLogic\Services\Implementations\OnlineCourseService.vb" />
     <Compile Include="BusinessLogic\Services\Implementations\OnsiteCoursesService.vb" />
+    <Compile Include="BusinessLogic\Services\Implementations\PersonService.vb" />
+    <Compile Include="BusinessLogic\Services\Implementations\StudentGradeService.vb" />
     <Compile Include="BusinessLogic\Services\Interfaces\ICourseService.vb" />
     <Compile Include="BusinessLogic\Services\Interfaces\IDepartmentService.vb" />
     <Compile Include="BusinessLogic\Services\Interfaces\IOfficeAsignament.vb" />
     <Compile Include="BusinessLogic\Services\Interfaces\IOnlineCourse.vb" />
+    <Compile Include="BusinessLogic\Services\Interfaces\IPerson.vb" />
+    <Compile Include="BusinessLogic\Services\Interfaces\IStudentGrade.vb" />
     <Compile Include="BusinessLogic\Services\ServiceLocator.vb" />
     <Compile Include="BusinessObjects\Helpers\DataContext.vb" />
     <Compile Include="BusinessObjects\Models\Course.vb">
@@ -152,6 +156,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Modules\Person\Views\PersonList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Modules\StudentGrade\Views\StudentGradeList.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Import Include="System.Threading.Tasks" />
@@ -188,6 +200,14 @@
     <Compile Include="Modules\OnlineCourses\ViewModels\OnlineCoursesViewModel.vb" />
     <Compile Include="Modules\OnlineCourses\Views\OnlineCoursesList.xaml.vb">
       <DependentUpon>OnlineCoursesList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\Person\ViewModels\PersonViewModel.vb" />
+    <Compile Include="Modules\Person\Views\PersonList.xaml.vb">
+      <DependentUpon>PersonList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Modules\StudentGrade\ViewModels\StudenGradeViewModel.vb" />
+    <Compile Include="Modules\StudentGrade\Views\StudentGradeList.xaml.vb">
+      <DependentUpon>StudentGradeList.xaml</DependentUpon>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb">
       <SubType>Code</SubType>
